# Pytorch_Lighting_Template

./: .gitignore  PLighting.yaml  README.md  main.py  pyproject.toml  user_guide.md
Logs/example_net/lightning_logs/version_0/: events.out.tfevents.1701749906.wuqilong.12308.0  hparams.yaml
Logs/example_net/lightning_logs/version_0/checkpoints/: last.ckpt
Logs/example_net/lightning_logs/version_0/checkpoints/best_epoch=3_acc_valid_acc_epoch/: dataloader_idx_0=0.9868.ckpt
Logs/example_net/lightning_logs/version_0/checkpoints/best_epoch=4_acc_valid_acc_epoch/: dataloader_idx_0=0.9871.ckpt
data/: __init__.py  data_interface.py  example_data.py  example_evaldata.py  example_testdata.py  example_traindata.py  standard_data.py
model/: __init__.py  example_net.py  model_interface.py  standard_net.py
tests/: test_data_interface.py  test_main.py  test_model_interface.py
