[project]
name = "pytorch-lightning-production-template"
version = "0.1.0"
description = "A clean production-oriented PyTorch Lightning project template."
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.4",
    "torch>=2.1",
    "torchvision>=0.16",
    "torchmetrics>=1.4",
    "tensorboard>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["data*", "model*"]
